# nstrf_2017

./: README.md  example_se3_msg.py
local_multisense_sl/: CMakeLists.txt  README.md  configureNetwork.sh  connect_to_val_network  multisense_world_view.rviz  package.xml
local_multisense_sl/launch/: multisense.launch
local_multisense_sl_utils/: CMakeLists.txt  package.xml
local_multisense_sl_utils/src/: pc_image_repeater_180_flip.cpp
object_extract_3d/grabcut/: CMakeLists.txt  README.md  grabcut_service_node.py  package.xml
object_extract_3d/grabcut/examples/: sample_grabCut.py
object_extract_3d/grabcut_msgs/: CMakeLists.txt  package.xml
object_extract_3d/grabcut_msgs/srv/: srv_picture_to_indices.srv
object_extract_3d/pc_extractor/: CMakeLists.txt  package.xml
object_extract_3d/pc_extractor/src/: colors.txt  human_tmc_cluster_based_yolo_3D_extractor.cpp  pc_image_repeater_180_flip.cpp  test_openpose_ros_service_call.cpp  tmc_cluster_based_yolo_3D_extractor.cpp
object_registration/: CMakeLists.txt  README.md  package.xml
object_registration/pcd_saved_files/: boxed_cloud.pcd  icp_example_transformed.pcd
object_registration/reference_codes/: icp_example.cpp  object_pose_estimate_iss_keypoints_and_icp.cpp  object_pose_estimate_sample.cpp
object_registration/src/: basic_controls.cpp  correspondence_icp.cpp  file_out.yaml  interest_box_marker.cpp  object_grasp.yaml  object_localize_service.cpp  object_pose_estimate_iss_keypoints_and_icp.cpp  object_pose_estimate_sample.cpp  object_registration_node.cpp  yaml-cpp_test.cpp
object_registration/src/quat_math/: quat_helper.cpp
object_registration/src/registration_gui/: GUI_registration.py  dialog_test.py
object_registration/srv/: ObjectLocalize.srv
object_registration/test/: reg.rviz  test_object_localize_service.cpp
text_to_speech/: README.md  example.py  say.py
val_desc/model/meshes/torso/: torso_red.dae
val_ik/: CMakeLists.txt  README.md  example_traj_pub  getCurrentBody.txt  ihmc_interface_reference.txt  package.xml  robot_states_reference.txt
val_ik/drake_urdf/: valkyrie_A_sim.urdf
val_ik/include/my_drake/: convexHull.h  eigen_types.h  rotmat2quat.h
val_ik/include/val_ik/: convexHull.h  global_vars.h  val_single_ik_srv.h
val_ik/launch/: ik_test.rviz  test_ik.launch  test_simple_ik_traj.launch  val_ik_viz.launch
val_ik/launch/test/: ik_traj_test.rviz  test_ik.launch  test_ik_traj.launch
val_ik/src/: convexHull.cpp  global_vars.cpp  se3_traj.cpp  test_ik_service.cpp  test_ik_simple_service.cpp  val_ik.cpp  val_ik_ros_pub_test.cpp  val_ik_ros_srv_node.cpp  val_ik_ros_srv_test.cpp  val_ik_service.cpp  val_single_ik_srv.cpp
val_ik/src/imported_drake_code/: convexHull.cpp  rotmat2quat.cpp
val_ik/src/test/: test_ik_service.cpp  val_ik.cpp
val_ik/srv/: DrakeFKBodyPose.srv  DrakeIKVal.srv  DrakeOneHandSingleIk.srv  DrakeTwoHandsSingleIk.srv
val_ik_msgs/: CMakeLists.txt  package.xml
val_ik_msgs/msg/: BodyPositionConstraint.msg  BodyQuaternionConstraint.msg  JointPositionConstraint.msg  RobotJointStates.msg  RobotState.msg
val_logic_manager/: CMakeLists.txt  Forearm and finger control.txt  compile_for_robot.sh  compile_for_sim.sh  new_IHMC_msgs_notes.txt  package.xml  setup.py
val_logic_manager/include/: compile_settings.h  ik_ihmc_bridge.h  logic_main.h  quat_helper.h  robot_state.h
val_logic_manager/include/compile_settings/on_sim/: compile_settings.h
val_logic_manager/launch/: UnitA_robot_description.launch  logic_manager.rviz  self_filter_and_object_registration_nodes.launch  soleFrame_static_tf.launch  val_ik_finalpose_viz.launch  val_ik_viz.launch  val_logic_all.launch
val_logic_manager/launch/valkyrie_ihmc_empty_world/: empty_mars.world  ihmc_val_emptyworld.launch
val_logic_manager/src/: ik_ihmc_bridge.cpp  interactive_marker.cpp  logic_callbacks.cpp  logic_main.cpp  logic_manager.cpp  robot_state.cpp  teleop_sim.py
val_logic_manager/src/button_gui/: GUI_params.py  GUI_val_logic.py
val_logic_manager/src/teleop/: keyboard_teleop.py  test_pelvis_quat_calc.py
val_viz/launch/: val_ik_rviz.rviz  val_robot_and_ik.rviz  val_robot_and_ik_v2.rviz  val_rviz.rviz  visualize_robot.launch  viz_ik_robot.launch  viz_robot_and_ik.launch  viz_robot_and_ik_v2.launch
val_viz/robot_urdf/: valkyrie_A_red.urdf
val_world_launchers/: CMakeLists.txt  README.md  package.xml
val_world_launchers/launch/: ihmc_val_emptyworld.launch  ihmc_val_tabletop_tide_world.launch
val_world_launchers/models/clorox/: model.config  model.sdf
val_world_launchers/models/red_bowl/: model.config  model.sdf
val_world_launchers/models/tide/: model.config  model.sdf
val_world_launchers/worlds/: tabletop.world  tabletop_tide.world
