<?xml version="1.0"?>
<package>
  <name>local_multisense_sl_utils</name>
  <version>0.0.0</version>
  <description>The local_multisense_sl_utils package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="stevenjj@todo.todo">stevenjj</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>  
  <build_depend>pcl_conversions</build_depend>    
  <build_depend>cv_bridge</build_depend>  
  <build_depend>message_filters</build_depend>    

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>  
  <run_depend>pcl_conversions</run_depend>  
  <run_depend>cv_bridge</run_depend>    
  <run_depend>message_filters</run_depend>  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
