<?xml version="1.0"?>
<package>
  <name>object_registration</name>
  <version>0.0.0</version>
  <description>The object_registration package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sjorgen1@todo.todo">sjorgen1</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>grabcut_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>

  <build_depend>yaml-cpp</build_depend>



  <run_depend>tf</run_depend>
  <run_depend>grabcut_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>yaml-cpp</run_depend>
  

  <build_depend>tmc_yolo2_ros</build_depend>
  <run_depend>tmc_yolo2_ros</run_depend>  

  <build_depend>message_runtime</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>message_filters</build_depend>
  <run_depend>message_filters</run_depend>  

  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>  

  <build_depend>openpose_ros_msgs</build_depend>
  <run_depend>openpose_ros_msgs</run_depend>  

  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
