<?xml version="1.0"?>
<package>
  <name>val_world_launchers</name>
  <version>0.0.0</version>
  <description>The val_world_launchers package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="stevenjj@todo.todo">stevenjj</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>srcsim</run_depend>

</package>
