<?xml version="1.0"?>
<package>
  <name>grabcut</name>
  <version>0.0.0</version>
  <description>The grabcut package. Extracts foreground points using grabcut.</description>

  <maintainer email="stevenjj@todo.todo">Steven Jens Jorgensen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>

  </export>
</package>
